test fix jumpy height on mobile

--- a/src/components/Landing/Landing.scss
+++ b/src/components/Landing/Landing.scss
@@ -1,6 +1,6 @@
 main {
-  height: 100vh;
-  display: block;
+  height: 100%;
+  min-height: 100vh;
   background: url(bg.jpg) no-repeat center/cover;
   background-attachment: fixed;
   position: relative;
